Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- Flash Widget
- Added a "CPS Boolean Field".
Bug fixes:
~~~~~~~~~~
- DateTime widget: a default value (current date) was presented in view mode if
  widget was required.
- added check for non empty value in the validation of the CPSSelectWidget with
  is_required == True
- Replaced remaining "latin1" encodings into "latin9" encodings.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Removed dumb LOGs that fill the logs with binary data.